--- a/templates/conda_env_variant-tools.yml
+++ b/templates/conda_env_variant-tools.yml
@@ -6,54 +6,69 @@ channels:
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=1_gnu
-  - bcftools=1.14=h88f3f91_0
+  - _openmp_mutex=4.5=2_gnu
+  - bcftools=1.10=h5d15f04_0
   - bzip2=1.0.8=h7f98852_4
   - c-ares=1.18.1=h7f98852_0
-  - ca-certificates=2021.10.26=h06a4308_2
-  - curl=7.80.0=h2574ce0_0
-  - gatk4=4.2.3.0=hdfd78af_0
-  - gsl=2.6=he838d99_2
-  - htslib=1.14=h9093b5e_0
-  - krb5=1.19.2=hcc1bbae_3
-  - ld_impl_linux-64=2.36.1=hea4e1c9_2
-  - libblas=3.9.0=12_linux64_openblas
-  - libcblas=3.9.0=12_linux64_openblas
-  - libcurl=7.80.0=h2574ce0_0
-  - libdeflate=1.7=h7f98852_5
-  - libedit=3.1.20210714=h7f8727e_0
+  - ca-certificates=2022.5.18.1=ha878542_0
+  - curl=7.83.1=h2283fc2_0
+  - dbus=1.13.18=hb2f20db_0
+  - expat=2.4.8=h27087fc_0
+  - freetype=2.11.0=h70c0345_0
+  - gatk4=4.2.6.1=py36hdfd78af_1
+  - gettext=0.21.0=hf68c758_0
+  - glib=2.70.2=h780b84a_4
+  - glib-tools=2.70.2=h780b84a_4
+  - gsl=2.5=h294904e_1
+  - htslib=1.10=h244ad75_0
+  - icu=70.1=h27087fc_0
+  - keyutils=1.6.1=h166bdaf_0
+  - krb5=1.19.3=h08a2579_0
+  - ld_impl_linux-64=2.38=h1181459_1
+  - libblas=3.9.0=14_linux64_openblas
+  - libcblas=3.9.0=14_linux64_openblas
+  - libcurl=7.83.1=h2283fc2_0
+  - libdeflate=1.3=h516909a_0
+  - libedit=3.1.20210910=h7f8727e_0
   - libev=4.33=h516909a_1
   - libffi=3.4.2=h7f98852_5
-  - libgcc-ng=11.2.0=h1d223b6_11
-  - libgfortran-ng=11.2.0=h69a702a_11
-  - libgfortran5=11.2.0=h5c6108e_11
-  - libgomp=11.2.0=h1d223b6_11
-  - libnghttp2=1.46.0=hce63b2e_0
+  - libgcc=7.2.0=h69d50b8_2
+  - libgcc-ng=12.1.0=h8d9b700_16
+  - libgfortran-ng=12.1.0=h69a702a_16
+  - libgfortran5=12.1.0=hdcd56e2_16
+  - libglib=2.70.2=h174f98d_4
+  - libgomp=12.1.0=h8d9b700_16
+  - libiconv=1.16=h516909a_0
+  - libnghttp2=1.47.0=he49606f_0
   - libnsl=2.0.0=h7f98852_0
-  - libopenblas=0.3.18=pthreads_h8fe5266_0
-  - libssh2=1.10.0=ha56f1ee_2
-  - libstdcxx-ng=11.2.0=he4da1e4_11
+  - libopenblas=0.3.20=pthreads_h78a6416_0
+  - libpng=1.6.37=h21135ba_2
+  - libssh2=1.10.0=ha35d2d1_2
+  - libstdcxx-ng=12.1.0=ha89aaad_16
   - libuuid=2.32.1=h7f98852_1000
-  - libzlib=1.2.11=h36c2ea0_1013
-  - ncurses=6.2=h58526e2_4
-  - openjdk=8.0.302=h7f98852_0
-  - openssl=1.1.1l=h7f98852_0
-  - perl=5.32.1=1_h7f98852_perl5
-  - pip=21.3.1=pyhd8ed1ab_0
-  - python=3.10.0=h62f1059_3_cpython
+  - libxcb=1.15=h7f8727e_0
+  - libxml2=2.9.14=h22db469_0
+  - libzlib=1.2.12=h166bdaf_0
+  - ncurses=6.3=h27087fc_1
+  - openjdk=11.0.13=h87a67e3_0
+  - openssl=3.0.3=h166bdaf_0
+  - pcre=8.45=h9c3ff4c_0
+  - perl=5.32.1=2_h7f98852_perl5
+  - pip=22.1.1=pyhd8ed1ab_0
+  - python=3.10.0=h543edf9_3_cpython
   - python_abi=3.10=2_cp310
-  - readline=8.1=h46c0cb4_0
-  - samtools=1.14=hb421002_0
-  - sqlite=3.36.0=h9cd32fc_2
+  - readline=8.1.2=h7f8727e_1
+  - samtools=1.7=1
+  - sqlite=3.38.5=h4ff8645_0
   - tabix=1.11=hdfd78af_0
-  - tk=8.6.11=h27826a3_1
-  - tzdata=2021e=he74cb21_0
-  - vt=0.57721=h41af197_4
-  - wheel=0.37.0=pyhd8ed1ab_1
+  - tk=8.6.12=h27826a3_0
+  - tzdata=2022a=h191b570_0
+  - vt=2015.11.10=he941832_3
+  - wheel=0.37.1=pyhd8ed1ab_0
   - xz=5.2.5=h516909a_1
-  - yaml=0.2.5=h516909a_0
-  - zlib=1.2.11=h36c2ea0_1013
+  - yaml=0.2.5=h7f98852_2
+  - zlib=1.2.11=h36c2ea0_1011
   - pip:
     - pyyaml==6.0
-    - setuptools==59.2.0
+    - setuptools==62.3.2
 prefix: /research/work/kotimone/miniconda3/envs/variant-tools
