--- a/nextflow.config
+++ b/nextflow.config
@@ -21,39 +21,29 @@ params {
     exomiser_java_opts = "-Xms4g -Xmx8g"
     lirical_java_opts = "-Xms4g -Xmx8g"
 
-    /*
-    GATK_SELECTVARIANTS {
-        java_path = "java"
-        java_opts = "-Xms4000m"
-        compression_level = 5
-    }
-
-    EXOMISER {
-        java_path = "java"
-        java_opts = "-Xms4g -Xmx8g "
-        compression_level = 5
-    }
-
-    LIRICAL_HTML {
-        java_path = "java"
-        java_opts = "-Xms4g -Xmx8g"
-        compression_level = 5
-    }
-    */
-
 }
 
 
 // limit computing resource by executor
 executor {
     $local {
-        cpus = 24
-        memory = '130 GB'
+        cpus = 6
+        memory = '40 GB'
     }
 }
 
 
 profiles {
+
+    local {
+        errorStrategy = 'retry'
+        maxRetries = 2
+        executor = 'local'
+        time = '12h'
+        cpus = 6
+        memory = '40 GB'
+    }
+
     singularity {
         
         singularity {
@@ -68,17 +58,7 @@ profiles {
             errorStrategy = 'retry'
             maxRetries = 3
             executor = 'local'
-            /*
-            withLabel:
-            'gatk_container' {
-                container = "broadinstitute/gatk:latest"
-            }
-
-            withLabel:
-            'gitc_container' {
-                container = "us.gcr.io/broad-gotc-prod/genomes-in-the-cloud:2.5.7-2021-06-09_16-47-48Z"
-            }
-            */
+            
         }
     }
 
@@ -98,17 +78,6 @@ profiles {
                 --error= \
                 --nodes=1 \
                 --auks=yes'
-            /*
-            withLabel:
-            'gatk4_container' {
-                container = "broadinstitute/gatk:latest"
-            }
-
-            withLabel:
-            'gitc_container' {
-                container = "us.gcr.io/broad-gotc-prod/genomes-in-the-cloud:2.5.7-2021-06-09_16-47-48Z"
-            }
-            */
         }
     }
 
